# Python-for-data-science

./: .gitignore
.github/workflows/: superlinter.yml
00/: Makefile  clear-cache.py
00/ex00/: Hello.py  Makefile  output  unit-test.sh
00/ex01/: format_ft_time.py
00/ex02/: find_ft_type.py  tester1.py  unit-test.sh
00/ex03/: NULL_not_found.py  tester1.py
00/ex04/: output  unit-test.sh  whatis.py
00/ex05/: building.py  output
00/ex06/: filterstring.py  ft_filter.py  output  unit-test.sh
00/ex07/: filterstring.py  output  sos.py  unit-test.sh
00/ex08/: Loading.py  tester.py
00/ex09/: LICENSE  Makefile  README.md  ft_package.py  pyproject.toml  setup.cfg  setup.py
00/ex09/ft_package/: __init__.py  ft_package.py
00/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
01/ex00/: give_bmi.py  tester1.py  unit-test.sh
01/ex01/: array2D.py  tester.py  tester1.py  unit-test.sh
01/ex02/: load_image.py  output  tester.py  tester1.py
01/ex03/: image_tools.py  load_image.py  tester.py  zoom.py
01/ex04/: load_image.py  rotate.py  tester.py
01/ex05/: image_tools.py  load_image.py  pimp_image.py  tester.py  tester1.py
02/ex00/: .~lock.life_expectancy_years.csv#  give_bmi.py  header_only.csv  invalid.csv  load_csv.py  test_valid.csv  tester.py  tester1.py
02/ex01/: Makefile  aff_life.py  tester1.py
02/ex02/: aff_pop.py
02/ex03/: .~lock.life_expectancy_years_data_error.csv#  income_per_person_gdppercapita_ppp_inflation_adjusted_data_error.csv  income_per_person_gdppercapita_ppp_inflation_adjusted_header_only.csv  projection_life.py  (+2 more)
(+45 files in other folders)
